{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "DiceRolling",
            "id": "c47206a5-695e-41ff-9a65-4c3b29212662",
            "actions": [
                {
                    "name": "RollDie1",
                    "type": "Button",
                    "id": "f2fa172b-12cf-423d-88bd-ea7587f9439d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RollDie2",
                    "type": "Button",
                    "id": "d1f2eaf0-c565-4671-9cbe-fbacedb2bfd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RollDie3",
                    "type": "Button",
                    "id": "5dce52c0-b858-4d1c-bed8-0073fb2bf6ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ff9c44e2-941f-4be3-a041-5eeef74f2010",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollDie1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c990423d-1550-42a4-b32d-a02d2b1dedc1",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollDie2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49573ef7-fe27-4860-8216-d73f6cb775e2",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollDie3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DiceAttack",
            "id": "cc8e4f79-87ff-45de-8d8e-0c72d6dd0744",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "4472d964-da19-4b80-9e0c-becc1ef6c558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3dd04a84-5cc6-4817-a9bc-c2943b9a1f57",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debugging",
            "id": "c974e3b1-ac32-49f7-a132-a6d26a164c45",
            "actions": [
                {
                    "name": "EnemyDefeat",
                    "type": "Button",
                    "id": "477be3c5-78ca-4d0d-8215-9824b9b2ac94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerDefeat",
                    "type": "Button",
                    "id": "bbd38c41-81d6-454d-847b-71e5b31b2d28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29bb9fe8-f3ff-4da0-9a38-5db7b7607411",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnemyDefeat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38b0d51a-2819-46a7-a182-006555b24d00",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerDefeat",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}